--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
+description = "Thi is my first Python project on Hexlet"
 authors = ["Anton Churakov"]
 readme = "README.md"
 packages = [{include = "brain_games"}]
+repository = "https://github.com/AntonChurakov/python-project-49"
+
 
 
 [tool.poetry.dependencies]
